<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/text_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:text="@string/que_1"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/text_question"

            app:layout_constraintTop_toBottomOf="@+id/text_question">

            <RadioButton
                android:id="@+id/radio_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sachin_tendulkar"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/radio_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/virat_kohli"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/radio_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adam_gilchirst"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/radio_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jacques_kallis"
                android:textColor="@color/black" />

        </RadioGroup>


        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/next"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="@id/text_question"
            app:layout_constraintRight_toRightOf="@id/text_question"
            app:layout_constraintTop_toBottomOf="@+id/radio_group" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>