<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/text_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:text="@string/que_2"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/check_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/white"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="@id/text_question"
            app:layout_constraintTop_toBottomOf="@+id/text_question" />

        <CheckBox
            android:id="@+id/check_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yellow"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="@id/text_question"
            app:layout_constraintTop_toBottomOf="@+id/check_a" />

        <CheckBox
            android:id="@+id/check_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orange"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="@id/text_question"
            app:layout_constraintTop_toBottomOf="@+id/check_b" />

        <CheckBox
            android:id="@+id/check_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/green"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="@id/text_question"
            app:layout_constraintTop_toBottomOf="@+id/check_c" />


        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/next"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="@id/text_question"
            app:layout_constraintRight_toRightOf="@id/text_question"
            app:layout_constraintTop_toBottomOf="@+id/check_d" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>